app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: sb-beer
  name: sb-beer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sb-beer
  template:
    metadata:
      labels:
        app: sb-beer
    spec:
      containers:
      - name: sb-beer
        imagePullPolicy: Always
        image: quay.io/rralhan/s2i-tekton:latest
        ports:
        - containerPort: 8080
          protocol: TCP
      imagePullSecrets:
      - name: quay-auth-secret
#---

#apiVersion: v1
#kind: Service
#metadata:
#  labels:
#    app: sb-beer
#  name: sb-beer
#spec:
#  ports:
#  - name: 8080-tcp
#    port: 8080
#    protocol: TCP
#    targetPort: 8080
#  selector:
#    app: sb-beer
#  sessionAffinity: None
#  type: ClusterIP

#---

#apiVersion: route.openshift.io/v1
#kind: Route
#metadata:
#  labels:
#    app: sb-beer
#  name: sb-beer
#spec:
#  port:
#    targetPort: 8080-tcp
#  to:
#    kind: Service
#    name: sb-beer
#    weight: 100
