app/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sb-beer
  name: sb-beer
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: sb-beer
  sessionAffinity: None
  type: ClusterIP
