app/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: sb-beer
  name: sb-beer
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: sb-beer
    weight: 100
